--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,28 +1,30 @@
-[package]
-name = "openbook-v2"
-version = "0.1.0"
-edition = "2021"
+[workspace]
+members = [
+  "lib/client",
+  "programs/*",
+]
 
-[dependencies]
+[workspace.dependencies]
+anchor-client = "0.29.0"
 anchor-lang = "0.29.0"
 anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.29.0" }
+fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
+pyth-sdk-solana = "0.8.0"
+solana-account-decoder = "=2.2.1"
+solana-client = "=2.2.1"
+solana-logger = "=2.2.1"
 solana-program = "=2.2.1"
-spl-memo = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
-spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
-arrayref = "0.3.9"
-bytemuck = "1.14.3"
-num-derive = "0.3.3"
-num-traits = "0.2.18"
-static_assertions = "1.1.0"
-thiserror = "1.0.61"
-borsh = "0.10.3"
-enumflags2 = "0.7.9"
-
-[dev-dependencies]
 solana-program-test = "=2.2.1"
+solana-rpc = "=2.2.1"
 solana-sdk = "=2.2.1"
 solana-logger = "=2.2.1"
+spl-associated-token-account = "6.0.0"
 
-[features]
-default = []
-test-bpf = []
+[profile.release]
+codegen-units = 1
+lto = "fat"
+overflow-checks = true
+[profile.release.build-override]
+codegen-units = 1
+incremental = false
+opt-level = 3
