--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ members = [
   "programs/*",
 ]
 
+resolver = "2"
+
 [workspace.dependencies]
 anchor-client = "0.29.0"
 anchor-lang = "0.29.0"
@@ -17,8 +19,9 @@ solana-program = "=2.2.1"
 solana-program-test = "=2.2.1"
 solana-rpc = "=2.2.1"
 solana-sdk = "=2.2.1"
-solana-logger = "=2.2.1"
 spl-associated-token-account = "6.0.0"
+spl-memo = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
+spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
 
 [profile.release]
 codegen-units = 1
