--- a/programs/openbook-v2/Cargo.toml
+++ b/programs/openbook-v2/Cargo.toml
@@ -22,8 +22,8 @@ enable-gpl = []
 anchor-lang = { workspace = true }
 anchor-spl = { workspace = true }
 solana-program = { workspace = true }
-spl-memo = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0 }
-spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0 }
+spl-memo = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
+spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
 arrayref = "0.3.9"
 bytemuck = { version = "^1.7.2", features = ["derive"] }
 num_enum = "0.5.1"
