Disable client feature in openbook-v2-client to avoid solana-compute-budget-interface

--- a/lib/client/Cargo.toml
+++ b/lib/client/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.3.0"
 doctest = false
 
 [features]
-default = ["openbook-v2/client"]
+default = []
 enable-gpl = ["openbook-v2/enable-gpl"]
 
 [dependencies]
