Disable solana-sdk in client feature for openbook-v2 to avoid solana-compute-budget-interface

--- a/programs/openbook-v2/Cargo.toml
+++ b/programs/openbook-v2/Cargo.toml
@@ -14,8 +14,8 @@ default = []
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
-test-bpf = ["client"]
-client = ["solana-sdk", "no-entrypoint"]
+test-bpf = [] # Убрали client
+client = ["no-entrypoint"] # Убрали solana-sdk
 enable-gpl = []
 
 [dependencies]
