--- a/programs/openbook-v2/Cargo.toml
+++ b/programs/openbook-v2/Cargo.toml
@@ -22,7 +22,7 @@ enable-gpl = []
 anchor-lang = { workspace = true }
 anchor-spl = { workspace = true }
 solana-program = { workspace = true }
-solana-sdk = { workspace = true, optional = true }
+# solana-sdk = { workspace = true, optional = true }
 spl-memo = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
 spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
 arrayref = "0.3.9"
@@ -38,7 +38,7 @@ itertools = "0.10.3"
 
 [dev-dependencies]
 solana-program-test = { workspace = true }
-solana-sdk = { workspace = true }
+# solana-sdk = { workspace = true }
 solana-logger = { workspace = true }
 spl-token = { version = "^3.5.0", features = ["no-entrypoint"] }
 spl-associated-token-account = { workspace = true }
