--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,25 @@
 [workspace]
 members = [
-  "lib/client",
-  "programs/*",
+    "lib/*",
+    "programs/*",
 ]
-
 resolver = "2"
 
 [workspace.dependencies]
-anchor-client = "0.29.0"
 anchor-lang = "0.29.0"
 anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.29.0" }
 fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
 pyth-sdk-solana = "0.8.0"
-solana-account-decoder = "=2.2.1"
-solana-client = "=2.2.1"
-solana-logger = "=2.2.1"
 solana-program = "=2.2.1"
 solana-program-test = "=2.2.1"
-solana-rpc = "=2.2.1"
 solana-sdk = "=2.2.1"
+solana-logger = "=2.2.1"
 spl-associated-token-account = "6.0.0"
 spl-memo = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
 spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
 
-[profile.release]
-codegen-units = 1
-lto = "fat"
-overflow-checks = true
-[profile.release.build-override]
-codegen-units = 1
-incremental = false
-opt-level = 3
+[patch.crates-io]
+solana-sdk = { version = "=2.2.1" }
+solana-rpc = { version = "=2.2.1" }
+solana-client = { version = "=2.2.1" }
+anchor-client = { git = "https://github.com/coral-xyz/anchor", tag = "v0.29.0" }
