--- a/lib/client/Cargo.toml
+++ b/lib/client/Cargo.toml
@@ -34,7 +34,7 @@ serde_json = "1.0.82"
 shellexpand = "2.1.0"
 solana-account-decoder = { workspace = true }
 solana-client = { workspace = true }
-solana-rpc = { workspace = true }
+# solana-rpc = { workspace = true }
 # solana-sdk = { workspace = true }
 spl-associated-token-account = { workspace = true }
 thiserror = "1.0.31"
